--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(libmilu miluhlib/hashtbl.c)
-add_library(milu milu/milu.c)
-target_link_libraries(milu libmilu)
+add_library(hmilu miluhlib/hashtbl.c)
+SET_TARGET_PROPERTIES( hmilu PROPERTIES COMPILE_FLAGS -fPIC )
+add_library(milu SHARED milu/milu.c)
+target_link_libraries(milu hmilu)
+
