--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,6 @@ SET_TARGET_PROPERTIES( hmilu PROPERTIES COMPILE_FLAGS -fPIC )
 add_library(milu SHARED milu/milu.c)
 target_link_libraries(milu hmilu)
 
+if(CUNIT_FOUND)
+	add_subdirectory(tests)
+endif(CUNIT_FOUND)
