Hash table resize implementation - approximately doubles size. Untested. Potential leaks when resizing: debug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,5 @@
 add_library(hmilu miluhlib/hashtbl.c)
 SET_TARGET_PROPERTIES( hmilu PROPERTIES COMPILE_FLAGS -fPIC )
 add_library(milu SHARED milu/milu.c)
-target_link_libraries(milu hmilu)
+target_link_libraries(milu hmilu m)
 
